# clariFi

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_cfo_os.py  0002_recommendation_product_state.py
backend/app/ai/rag/: retriever.py
backend/app/ai/schemas/: outputs.py
backend/app/ai/tools/: base.py  finance_tools.py
backend/app/ai/verification/: numeric_grounding.py
backend/app/ai/workflows/: cfo_chat_workflow.py  financial_analysis_workflow.py  fundraising_timing_workflow.py  receivables_workflow.py
backend/app/api/: __init__.py  allocation.py  chat.py  dependencies.py  investment.py  loans.py  profile.py  routes.py  tax.py
backend/app/connectors/: base.py  mock.py
backend/app/core/: config.py  observability.py
backend/app/db/: session.py
backend/app/engines/: base.py  burn.py  cash.py  chat_engine.py  forecast.py  hiring_scenario.py  investment_engine.py  loan_allocation_engine.py  payables.py  receivables.py  runway.py  tax_engine.py  tax_reserve.py  vendor_waste.py
backend/app/models/: __init__.py  finance.py  profile.py
backend/app/repositories/: finance.py
backend/app/schemas/: api.py  common.py
backend/app/services/: connectors.py  dashboard.py  documents.py  facts.py  recommendations.py  seed.py  simulation.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_engines.py  test_verification.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/audit/: page.tsx
frontend/hooks/: use-api.ts
frontend/lib/: utils.ts
frontend/services/: api.ts
frontend/types/: api.ts
(+38 files in other folders)
