[tool.poetry]
name = "clarifi"
version = "1.0.0"
description = "Agentic Personal CFO for India — verifiable financial intelligence"
authors = ["Jona Joy <jonajoy142@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
anthropic = "^0.34.2"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
