[tool.poetry]
name = "clarifi"
version = "1.0.0"
description = "Autonomous CFO Operating System backed by deterministic financial engines"
authors = ["Jona Joy <jonajoy142@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.2"
anthropic = "^0.34.2"
langchain = "^0.3.0"
langchain-anthropic = "^0.2.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg = {version = "^3.2.3", extras = ["binary"]}
redis = "^5.2.0"
celery = "^5.4.0"
langgraph = "^0.2.56"
litellm = "^1.53.7"
langfuse = "^2.54.1"
opentelemetry-api = "^1.28.2"
opentelemetry-sdk = "^1.28.2"
opentelemetry-instrumentation-fastapi = "^0.49b2"
pgvector = "^0.3.6"
python-multipart = "^0.0.17"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
